@@ -1,2 +1,11 @@
 # DiamondCircle
 Faculty Project in Java Programming
+
+### How to compile? 
+javac --module-path "C:\Program Files\JavaFX\javafx-sdk-18.0.2\lib" --add-modules javafx.controls,javafx.fxml,javafx.media org\unibl\etf\diamondcircle\Launcher.java
+
+
+### How to run?
+java --module-path "C:\Program Files\JavaFX\javafx-sdk-18.0.2\lib" --add-modules javafx.controls,javafx.fxml,javafx.media org.unibl.etf.diamondcircle.Launcher
+
+**Note:** Substitute the specified path to correct path to the JavaFX lib directory on your machine.
